# code-editor

./: README.md  biome.json  index.html  package-lock.json  package.json  ref.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/dumps/: cmd.packdump  ts.packdump  tsx.packdump
src-tauri/src/: main.rs
src-tauri/src/commands/: actions.rs  editor.rs  editor_shell.rs  mod.rs
src/atoms/: editor.ts  global.ts  header.ts  sidebar.ts  toast.ts
src/commands/: index.ts
src/components/Badge/: index.tsx
src/components/Button/: index.tsx
src/components/ButtonIcon/: index.tsx
src/components/CodeEditorM/: Lines.tsx  index.tsx
src/components/ConfirmModal/: index.tsx
src/components/DevIcon/: index.tsx
src/components/FloatingFileSearcher/: index.tsx
src/components/Input/: InputRoot.tsx  index.tsx
src/components/Menu/: index.tsx
src/components/Modal/: index.tsx
src/components/Popover/: index.tsx
src/components/Select/: index.tsx
src/components/ShortcutBadge/: index.tsx
src/components/Spacing/: index.tsx
src/components/Toast/: index.tsx
src/features/BottomContent/: index.tsx
src/features/EditorContent/: index.tsx
src/features/Header/: index.tsx
src/features/SettingsModal/: index.tsx
src/features/Sidebar/: index.tsx
src/features/Terminal/: index.tsx
src/hooks/: useEditorCommands.ts  useRegisterCommand.ts  useSelection.ts  useToast.ts
src/pages/Main/: Main.tsx
src/styles/: headerScroll.css  sidebarScroll.css
(+27 files in other folders)
